// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Channel selector channel selector 1`] = `
Immutable.ChannelState {
  "spentFilterValue": 38,
  "id": "this-is-a-test-id",
  "message": "Message written in the input",
  "messages": Immutable.Record {
    "loading": false,
    "data": Immutable.List [
      Immutable.Map {
        "id": 0,
        "type": 1,
        "createdAt": 0,
        "message": "This is some message 0",
        "spent": "23.23",
        "sender": Immutable.Map {
          "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
        },
      },
      Immutable.Map {
        "id": 1,
        "type": 1,
        "createdAt": 1,
        "message": "This is some message 1",
        "spent": "23.23",
        "sender": Immutable.Map {
          "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
        },
      },
      Immutable.Map {
        "id": 2,
        "type": 1,
        "createdAt": 2,
        "message": "This is some message 2",
        "spent": "23.23",
        "sender": Immutable.Map {
          "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
        },
      },
      Immutable.Map {
        "id": 3,
        "type": 1,
        "createdAt": 3,
        "message": "This is some message 3",
        "spent": "23.23",
        "sender": Immutable.Map {
          "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
        },
      },
    ],
    "errors": "",
    "page": 1,
  },
  "members": "0",
}
`;

exports[`Channel selector data selector 1`] = `
Immutable.Map {
  "id": "this-is-a-test-id",
  "name": "Channel this-is-a-test-id",
  "private": false,
  "hash": "test-hash-this-is-a-test-id",
  "address": "zs1testaddressthis-is-a-test-id",
  "unread": "this-is-a-test-id",
  "description": "Channel about this-is-a-test-id",
  "keys": Immutable.Map {
    "ivk": "incoming-viewing-key-this-is-a-test-id",
  },
}
`;

exports[`Channel selector message selector 1`] = `"Message written in the input"`;

exports[`Channel selector messages selector 1`] = `
Immutable.List [
  Immutable.Map {
    "id": 0,
    "type": 1,
    "createdAt": 0,
    "message": "This is some message 0",
    "spent": "23.23",
    "sender": Immutable.Map {
      "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
    },
  },
  Immutable.Map {
    "id": 1,
    "type": 1,
    "createdAt": 1,
    "message": "This is some message 1",
    "spent": "23.23",
    "sender": Immutable.Map {
      "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
    },
  },
  Immutable.Map {
    "id": 2,
    "type": 1,
    "createdAt": 2,
    "message": "This is some message 2",
    "spent": "23.23",
    "sender": Immutable.Map {
      "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
    },
  },
  Immutable.Map {
    "id": 3,
    "type": 1,
    "createdAt": 3,
    "message": "This is some message 3",
    "spent": "23.23",
    "sender": Immutable.Map {
      "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
    },
  },
]
`;

exports[`Channel selector spent filter value selector 1`] = `38`;
